--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,9 @@ url: "jacsarge@github.io" # the base hostname & protocol for your site, e.g. htt
 github_username:  jacsarge
 
 # Build settings
-remote_theme: "mmistakes/minimmal-mistakes@4.23.0"
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
-  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -51,5 +50,3 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
-theme: jekyll-theme-minimal
