--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "jacsarge@github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jacsarge
-
+show_downloads: "false"
 # Build settings
 theme: jekyll-theme-minimal
 plugins:
