--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Jackson Sargent
 email: jacsarge@umich.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  I'm a rising senior at the University of Michigan College of Engineering studying Computer Science with a minor in Political Science. I'm interested in AI research, rock climbing, and music.
+  I'm a rising senior at the University of Michigan College of Engineering studying Computer Science with a minor in Political Science. I'm interested in AI research, rock climbing, and music. Contact me at jacsarge@umich.edu
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "jacsarge@github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jacsarge
