--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "jacsarge@github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jacsarge
 show_downloads: false
-logo: stuff/logo.png
+logo: stuff/IMG_2378.png
 # Build settings
 theme: jekyll-theme-minimal
 plugins:
